# bazel-pycross-zstandard-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  build_wheel.sh  pyproject.toml  run_tests.sh  test_zstandard.py  zstd.BUILD
