load("@rules_pycross//pycross:defs.bzl", "pycross_wheel_build")
load("@rules_python//python:defs.bzl", "py_test", "py_binary")

package(default_visibility = ["//visibility:public"])

pycross_wheel_build(
    name = "zstandard_build",
    config_settings = {
        "--build-option": [
            "--no-cffi-backend",
            "--system-zstd",
        ],
    },
    copts = ["-Wl,-s"],
    native_deps = [
        "@zstd//:zstd",  # See zstd.BUILD
    ],
    post_build_hooks = [
        "@rules_pycross//pycross/hooks:repair_wheel",
    ],
    sdist = "@pdm//zstandard:sdist",
    tags = ["manual"],
    deps = [
        "@pdm//:setuptools",
        "@pdm//:wheel",
    ],
)

py_test(
    name = "test_zstandard",
    srcs = ["//:test_zstandard.py"],
    deps = ["@pdm//:zstandard"],
)
